<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homefill"
        android:icon="@drawable/home_icon"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/chat_add_icon"
        android:title="@string/navigation_chat" />

    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/circleinformation"
        android:title="@string/navigation_info" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/setting"
        android:title="@string/navigation_settings" />

    <item
        android:id="@+id/nav_member"
        android:icon="@drawable/person"
        android:title="@string/navigation_member" />
</menu>
